--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-    />
-    <title>brands</title>
-  </head>
-  <body>
-    <div class="brands-wrapper">
-      <div class="brands-title">
-        <p class="brands-title__text">Ремонт техники различных брендов</p>
-      </div>
-      <div class="brands-buttons swiper">
-        <div class="brands-buttons__wrapper swiper-wrapper ">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <title>brands</title>
+</head>
+
+<body>
+  <div class="brands-wrapper">
+    <div class="brands-title">
+      <p class="brands-title__text">Ремонт техники различных брендов</p>
+    </div>
+    <div class="brands-buttons swiper">
+      <div class="brands-buttons__wrapper swiper-wrapper ">
         <div class="brands-buttons__container swiper-slide">
           <button class="brands-buttons__button lenovo-button" title="Lenovo">
             <img src="img/lenovo.png" alt="Lenovo" />
@@ -34,10 +33,7 @@
           </button>
         </div>
         <div class="brands-buttons__container swiper-slide">
-          <button
-            class="brands-buttons__button viewsonic-button"
-            title="ViewSonic"
-          >
+          <button class="brands-buttons__button viewsonic-button" title="ViewSonic">
             <img src="img/viewSonic.png" alt="ViewSonic" />
           </button>
         </div>
@@ -79,19 +75,20 @@
       </div>
     </div>
     <div class="brands-buttons__pagination swiper-pagination"></div>
+  </div>
+  <div class="brands-show-all">
+    <div class="brands-show-all__icon-container">
+      <img src="img/expand.png" class="brands-show-all__icon" alt="" />
     </div>
-      <div class="brands-show-all">
-        <div class="brands-show-all__icon-container">
-          <img src="img/expand.png" class="brands-show-all__icon" alt="" />
-        </div>
-        <div class="brands-show-all__button-container">
-          <button class="brands-show-all__button" title="Показать все">
-            Показать все
-          </button>
-        </div>
-      </div>
+    <div class="brands-show-all__button-container">
+      <button class="brands-show-all__button" title="Показать все">
+        Показать все
+      </button>
     </div>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+  </div>
+  </div>
+  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+
 </html>
