--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   </div>
   <div class="brands-show-all">
     <div class="brands-show-all__icon-container">
-      <img src="img/expand.png" class="brands-show-all__icon" alt="" />
+     
+      <button class="brands-show-all__icon"> <img src="img/expand.png" class="brands-show-all__icon-img" alt="" /></button>
     </div>
     <div class="brands-show-all__button-container">
       <button class="brands-show-all__button" title="Показать все">
