--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
   </div>
   <div class="brands-show-all">
     <div class="brands-show-all__icon-container">
-     
-      <button class="brands-show-all__icon"> <img src="img/expand.png" class="brands-show-all__icon-img" alt="" /></button>
+
+      <button class="brands-show-all__icon"> <img src="img/expand.png" class="brands-show-all__icon-img"
+          alt="" /></button>
     </div>
     <div class="brands-show-all__button-container">
       <button class="brands-show-all__button" title="Показать все">
